Prevent upload of .git directory

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,6 +23,8 @@ deploy_script:
     make
     
     cd /home/appveyor/projects/professional-powershell
+    
+    rm -rf .git
 
     echo -e "cd www\ncd professional-powershell\nput -r ." > sftp
     
